--- a/index.html
+++ b/index.html
@@ -16,184 +16,8 @@
 <meta name="theme-color" content="#0a5fd8">
 <link rel="apple-touch-icon" href="assets/icon-192.png">
 
-<style>
-.success-btn{
-padding:14px 35px;
-border-radius:35px;
-border:2px solid white;
-background:transparent;
-color:white;
-font-weight:600;
-font-size:16px;
-cursor:pointer;
-transition:.3s ease;
-min-width:200px;
-}
+<body class="index-page">
 
-.success-btn:hover{
-background:white;
-color:#0a5fd8;
-transform:scale(1.05);
-}
-
-/* Larger Logo */
-.logo{
-height:115px;
-}
-
-@media(max-width:768px){
-.logo{
-height:85px;
-}
-}
-
-/* Hero */
-.hero{
-padding:80px 20px 50px;
-text-align:center;
-}
-
-.hero h1{
-font-size:42px;
-max-width:850px;
-margin:auto;
-line-height:1.3;
-}
-
-@media(max-width:768px){
-.hero h1{
-font-size:26px;
-}
-}
-
-/* Certification Badges */
-.certifications{
-margin-top:20px;
-display:flex;
-justify-content:center;
-gap:20px;
-flex-wrap:wrap;
-}
-
-.cert-badge{
-background:rgba(255,255,255,.15);
-padding:14px 22px;
-border-radius:15px;
-font-weight:600;
-display:flex;
-align-items:center;
-gap:10px;
-backdrop-filter:blur(10px);
-}
-
-.cert-badge i{
-color:#00e1ff;
-}
-
-/* Footer */
-
-
-/* Social Icons */
-.social-icons{
-margin-top:15px;
-display:flex;
-justify-content:center;
-gap:18px;
-font-size:20px;
-}
-
-.social-icons i{
-cursor:pointer;
-transition:.3s;
-}
-
-.social-icons i:hover{
-color:#00e1ff;
-transform:scale(1.2);
-}
-
-.footer-bottom{
-margin-top:30px;
-text-align:center;
-opacity:.6;
-font-size:13px;
-}
-
-/* Extra Mobile Optimization */
-@media(max-width:480px){
-
-nav{
-flex-direction:column;
-gap:10px;
-}
-
-.hero{
-padding:60px 15px 40px;
-}
-
-.primary-btn{
-width:100%;
-max-width:280px;
-}
-
-.carousel{
-flex-direction:column;
-align-items:center;
-}
-
-.card{
-width:100%;
-max-width:340px;
-}
-
-.footer-container{
-flex-direction:column;
-gap:30px;
-}
-
-.certifications{
-flex-direction:column;
-align-items:center;
-}
-
-}
-/* === FORCE NAV BUTTONS MATCH MAIN BUTTON ON MOBILE === */
-@media(max-width:768px){
-  nav{
-    flex-direction:column !important;
-    align-items:center !important;
-    width:100% !important;
-  }
-
-  nav button{
-    width:100% !important;
-    max-width:280px !important;
-    padding:14px 35px !important;
-  }
-}
-/* ===== MOBILE HOME ABOVE LOGOUT ===== */
-@media(max-width:768px){
-
-nav{
-flex-direction:column !important;
-align-items:center !important;
-}
-
-#homeNavBtn{
-order:1;
-width:100%;
-max-width:280px;
-}
-
-#loginNavBtn{
-order:2;
-width:100%;
-max-width:280px;
-}
-
-}
-
-</style>
 </head>
 
 <body>
