--- a/index.html
+++ b/index.html
@@ -16,11 +16,9 @@
 <meta name="theme-color" content="#0a5fd8">
 <link rel="apple-touch-icon" href="assets/icon-192.png">
 
-
-
 </head>
 
-<body class="index-page">
+<body>
 
 <header>
 <img src="assets/logo.png" class="logo"/>
