--- a/admin.html
+++ b/admin.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Admin Panel</title>
+<title>Admin Control Center</title>
 <link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
@@ -19,18 +21,12 @@
 
 <div class="topbar">
 
-<div class="topbar-row">
+<div class="topbar-row"></div>
+
 <div class="menu-btn" onclick="toggleSidebar()">☰</div>
-
-<div class="nav-buttons">
-<button onclick="window.location.href='index.html'">Home</button>
-<button onclick="logout()">Logout</button>
-</div>
-</div>
-
 <img src="assets/logo.png" class="logo">
 
-<div class="admin-title">Admin Panel</div>
+<div class="admin-title">Admin Control Center</div>
 
 </div>
 
