--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
 <meta name="theme-color" content="#0a5fd8">
 <link rel="apple-touch-icon" href="assets/icon-192.png">
 
+
+
 </head>
 
+<body class="index-page">
 <body>
 
-<header class="site-header">
-<img src="assets/logo.png" class="logo" alt="Aquahills logo"/>
+<header>
+<img src="assets/logo.png" class="logo"/>
 
 <nav>
 <button id="ordersBtn">Orders</button>
@@ -34,7 +37,6 @@
 
 <section class="hero" id="heroSection">
 <h1>Premium Drinking Water for Home & Business</h1>
-<p class="hero-subtitle">Safe hydration with a refined customer experience for homes and offices.</p>
 
 <div class="certifications">
 <div class="cert-badge">
@@ -44,410 +46,3 @@
 <i class="fa-solid fa-award"></i> BIS Certified
 </div>
 <div class="cert-badge">
-<i class="fa-solid fa-flask"></i> Quality Tested
-</div>
-</div>
-
-<button id="mainActionBtn" class="primary-btn" style="margin-top:30px;">
-Order Now
-</button>
-<button id="installAppBtn" class="primary-btn install-app-btn" type="button" style="display:none;">
-Install App
-</button>
-</section>
-
-<section class="premium-showcase">
-  <div class="showcase-content">
-    <div class="showcase-copy">
-      <span class="eyebrow">A Sign of Purity</span>
-      <h2>Trusted Delivery With Premium Presentation</h2>
-      <p>Integrated brand visuals in a controlled layout with smooth motion and strong mobile readability.</p>
-      <div class="showcase-points">
-        <span><i class="fa-solid fa-droplet"></i> RO + UV</span>
-        <span><i class="fa-solid fa-truck-fast"></i> Home Delivery</span>
-      </div>
-    </div>
-    <div class="showcase-media">
-      <img src="assets/20l-bottle.png" alt="Aquahills water bottle" class="showcase-bottle">
-    </div>
-  </div>
-</section>
-
-<section class="premium-carousel-wrap">
-  <div class="premium-carousel-shell">
-    <div class="premium-carousel" id="premiumCarousel">
-      <article class="premium-card" data-state="active">
-        <h2>Advanced RO + UV</h2>
-        <p>Multi stage purification for consistent safety and balanced taste quality.</p>
-      </article>
-      <article class="premium-card" data-state="right">
-        <h2>Doorstep Delivery</h2>
-        <p>Reliable and timely service for homes, offices, and institutional clients.</p>
-      </article>
-      <article class="premium-card" data-state="left">
-        <h2>Premium Support</h2>
-        <p>Professional service standards with smooth ordering and order follow up.</p>
-      </article>
-    </div>
-  </div>
-</section>
-
-</main>
-
-<footer class="footer">
-  <div class="footer-container">
-
-    <div class="footer-brand">
-      <h3>Aquahills Beverages</h3>
-      <p class="tagline">Pure & Safe Drinking Water</p>
-
-      <div class="social-icons">
-        <i class="fab fa-facebook-f"></i>
-        <i class="fab fa-instagram"></i>
-        <i class="fab fa-youtube"></i>
-        <i class="fab fa-linkedin-in"></i>
-      </div>
-    </div>
-
-    <div class="footer-contact">
-      <h4>Contact Us</h4>
-
-      <p>
-        <i class="fa-solid fa-phone"></i>
-        <a href="tel:+919910657711">+91-9910657711</a>
-      </p>
-    <p>
-<i class="fa-solid fa-phone"></i>
-<a href="tel:+919911657711">+91-9911657711</a>
-</p> 
-      <p>
-        <i class="fa-solid fa-envelope"></i>
-        <a href="mailto:aquahillsbeverages@gmail.com">
-          support@aquahills.com
-        </a>
-      </p>
-    </div>
-
-  </div>
-
-  <p class="footer-bottom">
-    © 2026 Aquahills Beverages | All Rights Reserved
-  </p>
-</footer>
-
-
-<script src="js/firebase.js"></script>
-
-<script>
-document.addEventListener("DOMContentLoaded",()=>{
-
-
-const premiumCarousel = document.getElementById("premiumCarousel")
-if(premiumCarousel){
-const cards=[...premiumCarousel.querySelectorAll('.premium-card')]
-let current=0
-const states=['active','right','left']
-
-function paint(){
-  cards.forEach((card,idx)=>{
-    const rel=(idx-current+cards.length)%cards.length
-    card.dataset.state=states[rel]||'hidden'
-  })
-}
-
-function go(n){
-  current=(n+cards.length)%cards.length
-  paint()
-}
-
-paint()
-setInterval(()=>go(current+1),4200)
-}
-
-const loginBtn=document.getElementById("loginNavBtn")
-const mainActionBtn=document.getElementById("mainActionBtn")
-const ordersBtn=document.getElementById("ordersBtn")
-const homeBtn = document.getElementById("homeNavBtn")
-
-firebase.auth().onAuthStateChanged(async user=>{
-homeBtn.style.display = "none"
-
-if(user){
-
-loginBtn.textContent="Logout"
-loginBtn.onclick=()=>firebase.auth().signOut().then(()=>location.reload())
-
-const userDoc=await db.collection("users").doc(user.uid).get()
-
-if(!userDoc.exists){
-console.error("User document missing")
-return
-}
-
-const data=userDoc.data()
-const role=data.role ? data.role.trim().toLowerCase() : "customer"
-
-if(role==="admin"){
-mainActionBtn.textContent="Admin Controls"
-mainActionBtn.onclick=()=>location.href="admin.html"
-ordersBtn.style.display="none"
-ordersBtn.onclick=()=>loadActiveOrders()
-}
-else if(role==="delivery"){
-mainActionBtn.textContent="Assigned Orders"
-mainActionBtn.onclick=()=>loadAssignedOrders(user.uid)
-ordersBtn.style.display="none"
-ordersBtn.onclick=()=>loadAssignedOrders(user.uid)
-
-}
-else{
-mainActionBtn.textContent="Order Now"
-mainActionBtn.onclick=()=>location.href="order.html"
-ordersBtn.onclick=()=>location.href="orders.html"
-}
-
-}
-else{
-loginBtn.textContent="Login"
-loginBtn.onclick=()=>location.href="login.html"
-
-mainActionBtn.textContent="Order Now"
-mainActionBtn.onclick=()=>location.href="order.html"
-
-ordersBtn.onclick=()=>location.href="orders.html"
-}
-
-})
-
-})
-
-async function loadActiveOrders(){
-const snap=await db.collection("orders")
-.where("status","!=","Delivered")
-.get()
-
-let rows=""
-
-for(const doc of snap.docs){
-const o=doc.data()
-const uDoc=await db.collection("users").doc(o.customerId).get()
-const u=uDoc.data()||{}
-
-rows+=`
-<tr>
-<td>${u.name||""}</td>
-<td>${u.phone||""}</td>
-<td>${o.bottles}</td>
-<td>₹${o.total}</td>
-<td>
-<button class="success-btn" onclick="markDelivered('${doc.id}')">
-Mark Delivered
-</button>
-</td>
-</tr>`
-}
-
-renderTable("Active Orders",rows)
-}
-
-async function loadAssignedOrders(uid){
-
-if(!uid) return;
-
-const homeBtn = document.getElementById("homeNavBtn");
-homeBtn.style.display = "inline-block";
-homeBtn.onclick = () => location.reload();
-
-const heroSection = document.getElementById("heroSection")
-const premiumShowcase = document.querySelector(".premium-showcase")
-const premiumCarouselWrap = document.querySelector(".premium-carousel-wrap")
-
-if(heroSection) heroSection.style.display="none"
-if(premiumShowcase) premiumShowcase.style.display="none"
-if(premiumCarouselWrap) premiumCarouselWrap.style.display="none"
-
-try{
-
-// ✅ ONLY query allowed documents
-const snap = await db.collection("orders")
-.where("assignedTo","==",uid)
-.get()
-
-let rows=""
-
-for(const doc of snap.docs){
-
-const o = doc.data()
-
-// Skip delivered in frontend
-if(o.status === "Delivered") continue;
-
-const userDoc = await db.collection("users").doc(o.customerId).get()
-const u = userDoc.data() || {}
-const addr = u.address || {}
-
-const fullAddress = `
-${addr.house||""},
-${addr.street||""},
-${addr.city||""} - ${addr.pincode||""}
-`
-
-rows+=`
-<tr>
-<td>${u.name||""}</td>
-<td>${u.phone||""}</td>
-<td>${o.bottles}</td>
-<td>${fullAddress}</td>
-<td>
-<button class="success-btn" onclick="markDelivered('${doc.id}')">
-Mark Delivered
-</button>
-</td>
-</tr>`
-}
-
-document.getElementById("mainContent").innerHTML = `
-<div style="width:100%;padding:40px 20px;display:flex;justify-content:center;">
-<div style="width:100%;max-width:1100px;">
-<div style="
-background:rgba(255,255,255,0.15);
-backdrop-filter:blur(15px);
-padding:30px;
-border-radius:20px;
-width:100%;
-box-shadow:0 10px 35px rgba(0,0,0,0.3);
-text-align:center;
-">
-<h2 style="margin-bottom:25px;">Assigned Orders</h2>
-<div style="width:100%;overflow-x:auto;">
-<table style="width:100%;border-collapse:collapse;text-align:center;min-width:800px;">
-<tr style="border-bottom:1px solid rgba(255,255,255,0.3);">
-<th style="padding:14px;">Name</th>
-<th style="padding:14px;">Phone</th>
-<th style="padding:14px;">Bottles</th>
-<th style="padding:14px;">Address</th>
-<th style="padding:14px;">Action</th>
-</tr>
-${rows||"<tr><td colspan='5' style='padding:20px;'>No Orders Assigned</td></tr>"}
-</table>
-</div>
-</div>
-</div>
-</div>
-`
-
-}catch(error){
-
-console.error("Assigned orders error:", error);
-
-document.getElementById("mainContent").innerHTML = `
-<div style="display:flex;justify-content:center;padding:40px;">
-<div style="
-background:rgba(255,255,255,0.15);
-padding:30px;
-border-radius:20px;
-text-align:center;
-max-width:500px;
-width:100%;">
-<h2>No Assigned Orders</h2>
-<p style="opacity:0.8;margin-top:10px;">You currently have no active deliveries.</p>
-</div>
-</div>`
-}
-
-}
-
-function renderTable(title,rows){
-document.getElementById("homeNavBtn").style.display = "none";
-const heroSection = document.getElementById("heroSection")
-const premiumShowcase = document.querySelector(".premium-showcase")
-const premiumCarouselWrap = document.querySelector(".premium-carousel-wrap")
-
-if(heroSection) heroSection.style.display="none"
-if(premiumShowcase) premiumShowcase.style.display="none"
-if(premiumCarouselWrap) premiumCarouselWrap.style.display="none"
-
-document.getElementById("mainContent").innerHTML=`
-<div class="dashboard-card">
-<h2 style="margin-bottom:20px;text-align:center;">${title}</h2>
-<table>
-<tr>
-<th>Name</th>
-<th>Phone</th>
-<th>Bottles</th>
-<th>Total</th>
-<th>Action</th>
-</tr>
-${rows||"<tr><td colspan='5'>No Orders</td></tr>"}
-</table>
-</div>`
-}
-
-async function markDelivered(id) {
-  // 1. Tell the database the order is delivered
-  await db.collection("orders").doc(id).update({ status: "Delivered" });
-
-  // 2. THE MAGIC: Find the button you just clicked and hide its entire row immediately
-  // This makes the order "vanish" from the list without needing to reload anything.
-  const allButtons = document.querySelectorAll('button');
-  allButtons.forEach(btn => {
-    if (btn.getAttribute('onclick') === `markDelivered('${id}')`) {
-      const row = btn.closest('tr'); // Find the table row containing this button
-      if (row) {
-        row.style.transition = "0.5s";
-        row.style.opacity = "0"; // Fade out
-        setTimeout(() => row.remove(), 500); // Remove from screen after fade
-      }
-    }
-  });
-}
-
-</script>
-<script>
-let deferredPrompt;
-const installBtn = document.getElementById("installAppBtn");
-
-function isStandalone() {
-  return window.matchMedia("(display-mode: standalone)").matches || window.navigator.standalone === true;
-}
-
-if (installBtn && !isStandalone()) {
-  installBtn.style.display = "inline-block";
-}
-
-window.addEventListener("beforeinstallprompt", (e) => {
-  e.preventDefault();
-  deferredPrompt = e;
-  if (installBtn) installBtn.style.display = "inline-block";
-});
-
-if (installBtn) {
-  installBtn.addEventListener("click", async () => {
-    if (deferredPrompt) {
-      deferredPrompt.prompt();
-      await deferredPrompt.userChoice;
-      deferredPrompt = null;
-      return;
-    }
-
-    alert("Install is available from your browser menu. On Android Chrome: tap menu ⋮ > Install app. On iPhone Safari: Share > Add to Home Screen.");
-  });
-}
-
-window.addEventListener("appinstalled", () => {
-  if (installBtn) installBtn.style.display = "none";
-  deferredPrompt = null;
-});
-</script>
-<script>
-if ("serviceWorker" in navigator) {
-  window.addEventListener("load", () => {
-    navigator.serviceWorker.register("/sw.js")
-      .then(() => console.log("PWA Service Worker Registered"))
-      .catch(err => console.log("SW registration failed", err));
-  });
-}
-</script>
-
-</body>
-</html>
