--- a/admin.html
+++ b/admin.html
@@ -1,3 +1,63 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Admin Panel</title>
+<link rel="stylesheet" href="css/style.css">
+
+<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+<link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#0a5fd8">
+<link rel="apple-touch-icon" href="assets/icon-192.png">
+
+
+</head>
+
+<body class="admin-page">
+
+<div class="topbar">
+
+<div class="topbar-row">
+<div class="menu-btn" onclick="toggleSidebar()">☰</div>
+
+<div class="nav-buttons">
+<button onclick="window.location.href='index.html'">Home</button>
+<button onclick="logout()">Logout</button>
+</div>
+</div>
+
+<img src="assets/logo.png" class="logo">
+
+<div class="admin-title">Admin Panel</div>
+
+</div>
+
+
+<div class="sidebar" id="sidebar">
+<button onclick="navigate('dashboard')">Dashboard</button>
+<button onclick="navigate('ordersSummary')">Orders</button>
+<button onclick="navigate('assignOrders')">Assign Orders</button>
+<button onclick="navigate('users')">Users</button>
+<button onclick="navigate('settings')">Pricing</button>
+<button onclick="logout()">Logout</button>
+</div>
+
+<div class="overlay" id="overlay" onclick="closeSidebar()"></div>
+
+<div class="content">
+<div class="wrapper" id="contentArea"></div>
+</div>
+
+<div class="modal" id="deleteModal">
+<div class="modal-content">
+<h3>Delete this user?</h3>
+<div class="modal-buttons">
+<button class="theme-btn danger-btn" onclick="confirmDelete()">Delete</button>
+<button class="theme-btn" onclick="closeModal()">Cancel</button>
+</div>
+</div>
 </div>
 
 <script src="js/firebase.js"></script>
